# yad-dialog

./: ChangeLog  Makefile.am  NEWS  README  README.md  TODO  configure.ac
data/: get-lang.c  yad.1
po/: POTFILES.in  pt_BR.po  ru.po  uk.po
src/: Makefile.am  about.c  browser.c  calendar.c  color.c  dnd.c  entry.c  file.c  font.c  form.c  html.c  icons.c  list.c  main.c  multi-progress.c  notebook.c  notification.c  option.c  paned.c  picture.c  print.c  progress.c  scale.c  send-notify.c  text.c  util.c  yad.h
